[package]
name = "hello-world"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
borsh = "1.5.7"
hello-world-methods = { path = "methods" }
hex = "0.4.3"
risc0-zkvm = { path = "../../risc0/zkvm",features=["prove","metal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
gpu-guard = { path = "../../tools/gpu-guard" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
